# canada_pension

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  scenarios.example.yaml
.github/workflows/: ci.yml
backend/retirement_calculator/: __init__.py  ai.py  api.py  cli.py  config.py  cpp.py  gis.py  models.py  oas.py  optimizer.py  output.py  policy.py  rrif.py  settings.py  simulator.py  tax.py
backend/retirement_calculator/templates/: comparison.html  detailed.html  summary.html
docs/: excel-reference.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  defaultConfig.ts  format.ts  styles.css  types.ts
tests/: test_ai.py  test_api.py  test_benefits.py  test_openai_live.py  test_output.py  test_simulator.py  test_tax.py
